forEnersys/nthing Salesforce CPQ/objects/Theme__c.object
<CustomObject>
    <fields>
        <fullName>AccentIconDisabledFontColor__c</fullName>
        <label>Icon Disabled Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccentIconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccentIconHoverFontColor__c</fullName>
        <label>Icon Hover Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompiledCSS__c</fullName>
        <label>Hidden Values</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetailColor__c</fullName>
        <label>Detail Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralBorderColor__c</fullName>
        <label>General Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralColor__c</fullName>
        <label>General Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralFontColor__c</fullName>
        <label>General Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonBorderColor__c</fullName>
        <label>Group Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonColor__c</fullName>
        <label>Group Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonDisabledFontColor__c</fullName>
        <label>Group Button Disabled Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonFontColor__c</fullName>
        <label>Group Button Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonHoverColor__c</fullName>
        <label>Group Button Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupButtonHoverFontColor__c</fullName>
        <label>Group Button Hover Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderBorderColor__c</fullName>
        <label>Header Border Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderColor__c</fullName>
        <label>Header Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderFontColor__c</fullName>
        <label>Header Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderSecondaryFontColor__c</fullName>
        <label>Header Supporting Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideIcons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will hide the icon square located on the left side of custom page headers.</description>
        <inlineHelpText>If checked, will hide the icon square located on the left side of custom page headers.</inlineHelpText>
        <label>Hide Icons on Page Headers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IconFontColor__c</fullName>
        <label>Icon Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryButtonColor__c</fullName>
        <label>Primary Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryButtonFontColor__c</fullName>
        <label>Primary Button Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryButtonHoverColor__c</fullName>
        <label>Primary Button Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryFontColor__c</fullName>
        <label>Secondary Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryHeaderColor__c</fullName>
        <label>Secondary Header Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabSelectedColor__c</fullName>
        <label>Tab Selected Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableHeaderFontColor__c</fullName>
        <label>Table Header Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableRowHoverColor__c</fullName>
        <label>Table Row Hover Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>